Update and rename index.htm to index.html

--- a/discover-the-power-of-cctlds/index.html
+++ b/discover-the-power-of-cctlds/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office"><head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Fattigaste ländernas topdomän</title>
+    <title>Discover the power of cctlds |Fattigaste ländernas topdomän</title>
     <meta name="x-apple-disable-message-reformatting">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css">
@@ -196,7 +196,7 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                             <p style="font-size: 22px; margin-bottom: 1em; font-family: arial,helvetica,sans-serif; margin-top: 0px; color: rgb(255, 254, 255); text-align: justify; line-height: 34px; background-color: transparent;" align="justify">För att påminna de fattiga
                               länderna om betydelsen av topdomänen placeras den
                               på nationernas flaggor i stället för religiösa och
-                              svårtolkade symboler.</p>
+                              svårtolkade symboler.Discover the power of cctlds</p>
                             <!--[if gte mso 12]>
     <table cellspacing="0" cellpadding="0" border="0" width="100%"><tr><td align="center"><![endif]-->
                             <table class="imgtable btnset" style="margin: 0px auto; text-align: center;" cellspacing="0" cellpadding="0" border="0">
