--- a/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO/index.html
+++ b/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="xr_bgh0"><head>
+  <meta content='width=device-width, initial-scale=1' name='viewport'>
+<meta content='yes' name='apple-mobile-web-app-capable'>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <script async="" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO/js"></script>
 <script>
@@ -7,7 +9,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-9TCP2LDKP6');
+  gtag('config', 'N3QBH8LM');
 </script>
 
  <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
