--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" class="xr_bgh0"><head>
+  <meta content='width=device-width, initial-scale=1' name='viewport'>
+<meta content='yes' name='apple-mobile-web-app-capable'>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<script type="text/javascript" async="" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//js"></script><script async="" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//gtm.js"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<script type="text/javascript" async="" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/js"></script><script async="" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//gtm.js"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-N8GM42SL');</script>
+})(window,document,'script','dataLayer','GTM-N3QBH8LM');</script>
 
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-CH5084V9YR');
+  gtag('config', 'G-N3QBH8LM');
 </script>
  <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
  <meta charset="utf-8">
@@ -21,15 +23,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
  <title>Flaggdesignindustrin |ccTLDs</title>
  <link href="https://multireligionvalsystem.eu.org/flaggdesignindustrin/flaggdesignindustrin.html/" rel="canonical">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//xr_fonts.css" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+ <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/xr_fonts.css" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
  <script><!--
  if(navigator.userAgent.indexOf('MSIE')!=-1 || navigator.userAgent.indexOf('Trident')!=-1){ document.write('<link rel="stylesheet" href="https://multireligionvalsystem.eu.org/flaggdesignindustrin/xr_fontsie.css"/>');} 
  if(navigator.userAgent.indexOf('Android')!=-1){ document.write('<link rel="stylesheet" href="https://multireligionvalsystem.eu.org/flaggdesignindustrin/xr_fontsrep.css"/>');} 
 --></script>
  <script>document.documentElement.className="xr_bgh0";</script>
- <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//xr_main.css">
- <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//custom_styles.css" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
- <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//xr_text.css" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+ <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/xr_main.css">
+ <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/custom_styles.css" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+ <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/xr_text.css" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
  <script>
  <!--
   var xr_bckgx=0,xr_bckgy=0;function xr_rx(){var ww=document.documentElement.clientWidth;
@@ -40,14 +42,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   window.onresize=xr_rx; window.onload=xr_rx;
  -->
 </script>
- <script async="" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//replaceMobileFonts.js"></script>
+ <script async="" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/replaceMobileFonts.js"></script>
  <script>xr_spavert=1;xr_pagegap=4;</script>
  <style>
   #xr_xr {top:0px;}
  </style>
 </head>
 <body style="background-color: rgb(96, 100, 104); background-position: 0px 0px;">
- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N8GM42SL"
+ <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N3QBH8LM"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!--[if gte IE 9]><!-->
@@ -62,13 +64,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="xr_page_en-nya-flaggdesignindustrin"></div>
 <div class="xr_apb xr_pp" style="width: 1938px; height: 2049px; top:0px; left:0px; background-color: white; box-shadow: 5px 5px 6px rgba(0,0,0,0.25);"></div>
 <div id="xr_xrc1" class="xr_ap xr_xrc" style="width: 1939px; height: 2049px; overflow:hidden;">
- <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//112.png" alt="" title="" style="left:1879px;top:1956px;width:61px;height:47px;">
- <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//55.jpg" alt="" title="" style="left:36px;top:1px;width:1100px;height:740px;">
- <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//113.jpg" alt="" title="" style="left:42px;top:94px;width:233px;height:157px;">
- <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//114.png" alt="En ny flaggdesignindustri" title="" style="left:43px;top:77px;width:213px;height:25px;">
- <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//123.png" alt=".ua" title="" style="left:648px;top:154px;width:141px;height:59px;">
- <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//125.png" alt="Country code top-level domain" title="" style="left:261px;top:294px;width:507px;height:65px;">
- <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//73.jpg" alt="" title="" style="left:39px;top:743px;width:1100px;height:491px;">
+ <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/112.png" alt="" title="" style="left:1879px;top:1956px;width:61px;height:47px;">
+ <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/55.jpg" alt="" title="" style="left:36px;top:1px;width:1100px;height:740px;">
+ <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/113.jpg" alt="" title="" style="left:42px;top:94px;width:233px;height:157px;">
+ <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/114.png" alt="En ny flaggdesignindustri" title="" style="left:43px;top:77px;width:213px;height:25px;">
+ <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/123.png" alt=".ua" title="" style="left:648px;top:154px;width:141px;height:59px;">
+ <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/125.png" alt="Country code top-level domain" title="" style="left:261px;top:294px;width:507px;height:65px;">
+ <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/73.jpg" alt="" title="" style="left:39px;top:743px;width:1100px;height:491px;">
  <div class="xr_txt Normal_text xr_s0" style="position: absolute; left:35px; top:1254px; width:1035px; height:10px;">
   <span class="xr_tl Normal_text xr_s1" style="top: 5.82px;">Varför talar SVT om tvål med en hållbar design medan man döljer det faktum att d<a href="https://multireligionvalsystem.eu.org/Fattigaste%20l%C3%A4ndernas%20topdom%C3%A4n/Bist%C3%A5nd%20och%20ccTLDs" onclick="">en nya </a></span>
   <span class="xr_tl Normal_text xr_s1" style="top: 32.63px;"><a href="https://multireligionvalsystem.eu.org/Fattigaste%20l%C3%A4ndernas%20topdom%C3%A4n/Bist%C3%A5nd%20och%20ccTLDs" onclick="">flaggdesignindustin med ländernars egna ccTLDs</a> vilka står i mitten på flaggorna i stället för de </span>
@@ -85,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <span class="xr_tl Normal_text xr_s1" style="top: 377.82px;">Hjälporganisationer som SIDA kan koppla biståndet till IT-infrastrukturen där landets </span>
   <span class="xr_tl Normal_text xr_s1" style="top: 404.63px;">topdomän måste fungera </span>
   <span class="xr_tl Normal_text xr_s1" style="top: 431.44px;">Genom att f<a href="https://refugee.wordpress.com/" onclick="">lyktingar från varje land </a>bildar ett I<a href="https://fdu.multireligionvalsystem.eu.org/flaggdesign-cctlds/flaggdesign-cctlds.html" onclick="">T-bolag</a> med syfte att få igång sina länders </span>
-  <span class="xr_tl Normal_text xr_s1" style="top: 458.25px;">ccTLDs utifrån som flyktingar / invandrare i de nordiska länderna och EU får de möljghet att </span>
+  <span class="xr_tl Normal_text xr_s1" style="top: 458.25px;">ccTLDs utifrån som flyktingar/invandrare i de nordiska länderna och EU får de möljghet att </span>
   <span class="xr_tl Normal_text xr_s1" style="top: 485.06px;">driva sitt lands topdomän från det land som de sökt skydd i.</span>
   <span class="xr_tl Normal_text xr_s4" style="top: 538.69px;">Vapenindustrin är en ohållbar industri och därför måste den avvecklas på samma sätt som </span>
   <span class="xr_tl Normal_text xr_s4" style="top: 565.5px;">tobaksindustrin !</span>
@@ -98,32 +100,32 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <span class="xr_tl Normal_text xr_s5" style="top: 29.72px;">tidigt från </span>
   <span class="xr_tl Normal_text xr_s5" style="top: 43.13px;">flaggorna .</span>
  </div>
- <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//117.png" alt="" title="" style="left:346px;top:738px;width:791px;height:62px;">
+ <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/117.png" alt="" title="" style="left:346px;top:738px;width:791px;height:62px;">
 <div class="xr_group">
- <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//118.png" alt="" title="" style="left:89px;top:1948px;width:956px;height:18px;">
+ <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/118.png" alt="" title="" style="left:89px;top:1948px;width:956px;height:18px;">
  <div class="xr_txt xr_s6" style="position: absolute; left:140px; top:1957px; width:224px; height:10px;">
   <span class="xr_tl xr_s6" style="top: -10.01px;">© https://community.multireligionvalsystem.eu.org</span>
  </div>
 </div>
  <a href="https://multireligionvalsystem.eu.org/flaggdesignindustrin/%20https://www.facebook.com/demokratin" onclick="return(xr_nn());">
-  <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//119.png" alt="" title="" style="left:909px;top:1997px;width:32px;height:31px;">
+  <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/119.png" alt="" title="" style="left:909px;top:1997px;width:32px;height:31px;">
  </a>
  <a href="https://twitter.com/DPNS" onclick="return(xr_nn());">
-  <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//120.png" alt="" title="" style="left:813px;top:1885px;width:32px;height:31px;">
+  <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/120.png" alt="" title="" style="left:813px;top:1885px;width:32px;height:31px;">
  </a>
  <a href="http://www.youtube.com/user/solidaritet" onclick="return(xr_nn());">
-  <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//121.png" alt="" title="" style="left:860px;top:1967px;width:32px;height:31px;">
+  <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/121.png" alt="" title="" style="left:860px;top:1967px;width:32px;height:31px;">
  </a>
  <a href="http://se.linkedin.com/in/solidarity" onclick="return(xr_nn());">
-  <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//122.png" alt="" title="" style="left:829px;top:1929px;width:32px;height:31px;">
+  <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/122.png" alt="" title="" style="left:829px;top:1929px;width:32px;height:31px;">
  </a>
  <span class="xr_ar" id="LayoutControl:58stretch:59h-path:5850:37:59v-path:5850:37" style="left:3px;top:1238px;width:1137px;height:807px; pointer-events: none; overflow: visible;pointer-events: none;"><svg style="position:absolute; left:0; top:0; width:100%; height:100%; overflow:visible; viewBox: 0 0 1137 807; pointer-events: none;">  <path d="M 0 794.62 L 0 7.57 C 0 4.74 2.44 2.13 6.58 0 L 1130.01 0 C 1134.15 2.13 1136.59 4.74 1136.59 7.57 L 1136.59 794.62 C 1136.59 801.72 1121.19 807.49 1102.22 807.49 L 34.37 807.49 C 15.4 807.49 0 801.72 0 794.62 Z" fill="Transparent" stroke="#B05B00" stroke-width="6" stroke-miterlimit="10.0" fill-rule="evenodd" pointer-events="visible"></path>
  </svg></span>
  <a href="https://www.hostmaster.ua/registrars/" onclick="return(xr_nn());">
-  <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//124.png" alt="https://www.hostmaster.ua/registrars/" title="" style="left:549px;top:219px;width:425px;height:46px;">
+  <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/124.png" alt="https://www.hostmaster.ua/registrars/" title="" style="left:549px;top:219px;width:425px;height:46px;">
  </a>
  <a href="https://www.government.ua/" onclick="return(xr_nn());">
-  <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//126.png" alt="https://www.government.ua/" title="" style="left:585px;top:118px;width:279px;height:44px;">
+  <img class="xr_ap" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/126.png" alt="https://www.government.ua/" title="" style="left:585px;top:118px;width:279px;height:44px;">
  </a>
 </div>
 </div>
@@ -131,6 +133,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 <!--[if lt IE 7]><script src="https://multireligionvalsystem.eu.org/flaggdesignindustrin/png.js"></script><![endif]-->
 <script defer="defer" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon="{&quot;rayId&quot;:&quot;90ef42ba1a925427&quot;,&quot;version&quot;:&quot;2025.1.0&quot;,&quot;r&quot;:1,&quot;token&quot;:&quot;90fdef7da9c745b9921b35c565174988&quot;,&quot;serverTiming&quot;:{&quot;name&quot;:{&quot;cfExtPri&quot;:true,&quot;cfL4&quot;:true,&quot;cfSpeedBrain&quot;:true,&quot;cfCacheStatus&quot;:true}}}" crossorigin="anonymous"></script>
-
+<script src="https://widget.trustmary.com/vbbQgzMDT0"></script>
 
 </body></html>
