--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
  <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
  <meta charset="utf-8">
  <meta name=" IT-infrastrukturen" content="En nya flaggdesignindustrin">
- <meta name="Flaggdesignindustrins" content="https://multireligionvalsystem.eu.org/flaggdesignindustrin/xr_files.txt">
+ <meta name="Flaggdesignindustrins" content="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/xr_files.txt">
  <title>Flaggdesignindustrin |ccTLDs</title>
- <link href="https://multireligionvalsystem.eu.org/flaggdesignindustrin/flaggdesignindustrin.html/" rel="canonical">
+ <link href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/" rel="canonical">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/xr_fonts.css" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
  <script><!--
  if(navigator.userAgent.indexOf('MSIE')!=-1 || navigator.userAgent.indexOf('Trident')!=-1){ document.write('<link rel="stylesheet" href="https://multireligionvalsystem.eu.org/flaggdesignindustrin/xr_fontsie.css"/>');} 
- if(navigator.userAgent.indexOf('Android')!=-1){ document.write('<link rel="stylesheet" href="https://multireligionvalsystem.eu.org/flaggdesignindustrin/xr_fontsrep.css"/>');} 
+ if(navigator.userAgent.indexOf('Android')!=-1){ document.write('<link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/xr_fontsrep.css"/>');} 
 --></script>
  <script>document.documentElement.className="xr_bgh0";</script>
  <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/xr_main.css">
