--- a/index.html
+++ b/index.html
@@ -131,8 +131,34 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 </div>
 </div>
-<!--[if lt IE 7]><script src="https://multireligionvalsystem.eu.org/flaggdesignindustrin/png.js"></script><![endif]-->
-<script defer="defer" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org//vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon="{&quot;rayId&quot;:&quot;90ef42ba1a925427&quot;,&quot;version&quot;:&quot;2025.1.0&quot;,&quot;r&quot;:1,&quot;token&quot;:&quot;90fdef7da9c745b9921b35c565174988&quot;,&quot;serverTiming&quot;:{&quot;name&quot;:{&quot;cfExtPri&quot;:true,&quot;cfL4&quot;:true,&quot;cfSpeedBrain&quot;:true,&quot;cfCacheStatus&quot;:true}}}" crossorigin="anonymous"></script>
+<!--[if lt IE 7]><script src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/png.js"></script><![endif]-->
+<script defer="defer" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon="{&quot;rayId&quot;:&quot;90ef42ba1a925427&quot;,&quot;version&quot;:&quot;2025.1.0&quot;,&quot;r&quot;:1,&quot;token&quot;:&quot;90fdef7da9c745b9921b35c565174988&quot;,&quot;serverTiming&quot;:{&quot;name&quot;:{&quot;cfExtPri&quot;:true,&quot;cfL4&quot;:true,&quot;cfSpeedBrain&quot;:true,&quot;cfCacheStatus&quot;:true}}}" crossorigin="anonymous"></script>
 <script src="https://widget.trustmary.com/vbbQgzMDT0"></script>
+ <div class="wrapper">
+      <div class="button">
+        <div class="icon"> <i class="fab fa-facebook-f"></i> </div>
+        <span><img src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/bist%C3%A5ndet%20till%20Palestinier.png"
 
+            alt="" title="FRC">Facebook</span> </div>
+      <div class="button">
+        <div class="icon"> <i class="fab fa-twitter"></i> </div>
+        <span>Twitter</span> </div>
+      <div class="button">
+        <div class="icon"><a href="https://www.instagram.com/" target="_blank"> <i
+
+              class="fab fa-instagram"></i> </a></div>
+        <a href="https://instagram.com/explore/tags/multireligionvalsystem/" target="_blank"> <span>Instagram</span></a>
+      </div>
+      <div class="button">
+        <div class="icon"><a href="https://facebook.com/" target="_blank"> <i class="fab fa-facebook"></i>
+          </a></div>
+        <a href="https://codepen.io/" target="_blank"> <span>Codepen</span></a>
+      </div>
+      <div class="button">
+        <div class="icon"><a href="https://www.youtube.com/" target="_blank"> <i
+
+              class="fab fa-youtube"></i> </a></div>
+        <a href="https://www.youtube.com/channel/UCqx0TnRON2UuzPxGfKWGHPw" target="_blank"> <span>YouTube</span></a>
+      </div>
+    </div>
 </body></html>
