--- a/a.htm
+++ b/a.htm
@@ -1,2 +1,3 @@
 <html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"><script>window.__CF$cv$params={r:'8caf4bed7f0bb523',t:'MTcyNzY0Nzc1Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);</script><script src="a_data/main.js"></script></head><body></body></html>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <script>window.__CF$cv$params={r:'8caf4bed7f0bb523',t:'MTcyNzY0Nzc1Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);</script><script src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/a_data/main.js"></script></head><body></body></html>
