--- a/Bistand-och-ccTLDs/index.html
+++ b/Bistand-och-ccTLDs/index.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office"><head>
-    <meta content='width=device-width, initial-scale=1' name='viewport'>
-<meta content='yes' name='apple-mobile-web-app-capable'>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-N3QBH8LM"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-N3QBH8LM');
-</script>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-N3QBH8LM');</script>
-<!-- End Google Tag Manager -->
+})(window,document,'script','dataLayer','GTM-MMV2S7Z6');</script>
+    <meta content='width=device-width, initial-scale=1' name='viewport'>
+<meta content='yes' name='apple-mobile-web-app-capable'>
+<meta name="google-site-verification" content="WdnsMxOviwQTsK0Dxo8FqJ2spmgqYOGkSwh6Nl-4wZk" />
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Bistånd och Fattigaste ländernas topdomän|ccTLDs </title>
@@ -478,8 +468,8 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                       <tbody>
                         <tr style="height: 1316px;" height="1316">
                           <th class="contenttd" style="border: medium none ; padding: 20px 15px; width: 287px; vertical-align: top; font-weight: normal; text-align: left; background-color: transparent;">
-                            <p style="font-size: 24px; margin-bottom: 1em; font-family: geneve,arial,helvetica,sans-serif; margin-top: 0px; color: rgb(34, 123, 6); text-align: left; line-height: 37px; background-color: transparent;" align="left">F R E D S P L A N</p>
-                            <p style="font-size: 14px; margin-bottom: 1em; font-family: arial,helvetica,sans-serif; margin-top: 0px; color: rgb(87, 87, 87); text-align: justify; line-height: 22px; background-color: transparent;" align="justify">I tur och ordning kallar varje
+                            <p style="font-size: 24px; margin-bottom: 1em; font-family: geneve,arial,helvetica,sans-serif; margin-top: 0px; color: rgb(34, 123, 6); text-align: left; line-height: 37px; background-color: transparent;" align="left">F R E D S P L A N-asyl- och flyktingpolitik</p>
+                            <p style="font-size: 14px; margin-bottom: 1em; font-family: arial,helvetica,sans-serif; margin-top: 0px; color: rgb(87, 87, 87); text-align: justify; line-height: 22px; background-color: transparent;" align="justify">flyktingpolitik- I tur och ordning kallar varje
                               partiordförande de medlemmar som har sina rötter
                               i ett land där krig , oroligheter , konflikter med
                               grannländer eller minoritetsgrupper pågår till
@@ -550,7 +540,7 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                                   <tr>
                                     <td style="padding-right: 5px;"><a href="https://www.facebook.com/groups/Multireligionvalsystemet/" target="_blank"><img title="Facebook" style="border: medium none ; display: block;" alt="Facebook" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_17_83a7f0b2-d691-41b1-b77c-a8e70e0de6ca.png" width="48"></a> </td>
                                     <td style="padding-right: 5px;"><a href="https://twitter.com/DPNS" target="_blank"><img title="Twitter" style="border: medium none ; display: block;" alt="Twitter" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_18_b0b496e9-4393-4a51-9623-3209baf69daf.png" width="48"></a> </td>
-                                    <td style="padding-right: 5px;"><a href="https://plus.google.com/100000647790229252834/posts" target="_blank"><img title="Googleplus" style="border: medium none ; display: block;" alt="Googleplus" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_19_364e8190-483e-4080-a30a-d64581d3d2ce.png" width="48"></a> </td>
+                                    <td style="padding-right: 5px;"><a href="https://flyktingpolitik.glideapp.io/" target="_blank"><img title="Googleplus" style="border: medium none ; display: block;" alt="Googleplus" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_19_364e8190-483e-4080-a30a-d64581d3d2ce.png" width="48"></a> </td>
                                     <td style="padding-right: 5px;"><a href="https://www.linkedin.com//in/solidarity" target="_blank"><img title="Linkedin" style="border: medium none ; display: block;" alt="Linkedin" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_20_c82aa9bd-7c4b-411b-b153-71a407ee138b.png" width="48"></a> </td>
                                     <td style="padding-right: 5px;"><a href="https://multireligionvalsystem.blogspot.com/rss" target="_blank"><img title="Rss" style="border: medium none ; display: block;" alt="Rss" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_21_31b7fdd0-c66e-47f6-ad7c-6097f752a9ab.png" width="48"></a> </td>
                                     <td style="padding-right: 5px;"><a href="https://pinterest.com/denyasvenskarna/" target="_blank"><img title="Pinterest" style="border: medium none ; display: block;" alt="Pinterest" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_22_5aad2cae-1ed9-49cc-a150-4d322571c389.png" width="48"></a> </td>
@@ -576,7 +566,7 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                                   sådde och vi åt , vi sår och de äter</span></strong><br>
                               <a style="color: rgb(223, 224, 224);" href="http://multireligionvalsystem.eu.org/Fattigaste%20l%C3%A4ndernas%20topdom%C3%A4n/Bist%C3%A5nd%20och%20ccTLDs/multireligionvalsystem/">multireligionval.</a>cf
 -
-                              <a style="color: rgb(223, 224, 224);" href="mailto:info@dpns.cf">denyasvenskarna@gmail.com</a></p>
+                              <a style="color: rgb(223, 224, 224);" href="mailto:info@multireligionvalsystem.eu.org/">denyasvenskarna@gmail.com</a></p>
                             <p style="font-size: 10px; margin-bottom: 1em; font-family: arial,helvetica,sans-serif; margin-top: 0px; color: rgb(124, 124, 124); text-align: center; line-height: 12px; background-color: transparent;" align="center"><span style="font-size: 18px; line-height: 22px;">Miljö
 modellen
                                 för demokrati, demokrati från teori till praktik</span><br>
@@ -603,6 +593,7 @@ Demokrati,
     <!-- Multireligionvalsystem -->
   <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'8e1800941c8fb4f9',t:'MTczMTQzMDAyOS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: medium; visibility: hidden;"></iframe><script defer="defer" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon="{&quot;rayId&quot;:&quot;8e1800941c8fb4f9&quot;,&quot;version&quot;:&quot;2024.10.5&quot;,&quot;r&quot;:1,&quot;token&quot;:&quot;90fdef7da9c745b9921b35c565174988&quot;,&quot;serverTiming&quot;:{&quot;name&quot;:{&quot;cfExtPri&quot;:true,&quot;cfL4&quot;:true,&quot;cfSpeedBrain&quot;:true,&quot;cfCacheStatus&quot;:true}}}" crossorigin="anonymous"></script>
 <script defer="defer" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon="{&quot;rayId&quot;:&quot;90ef38d619505428&quot;,&quot;version&quot;:&quot;2025.1.0&quot;,&quot;r&quot;:1,&quot;token&quot;:&quot;90fdef7da9c745b9921b35c565174988&quot;,&quot;serverTiming&quot;:{&quot;name&quot;:{&quot;cfExtPri&quot;:true,&quot;cfL4&quot;:true,&quot;cfSpeedBrain&quot;:true,&quot;cfCacheStatus&quot;:true}}}" crossorigin="anonymous"></script>
-
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MMV2S7Z6"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </body></html>
