--- a/Bistand-och-ccTLDs/index.html
+++ b/Bistand-och-ccTLDs/index.html
@@ -8,7 +8,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta content='width=device-width, initial-scale=1' name='viewport'>
 <meta content='yes' name='apple-mobile-web-app-capable'>
 <meta name="google-site-verification" content="WdnsMxOviwQTsK0Dxo8FqJ2spmgqYOGkSwh6Nl-4wZk" />
-
+    <meta name="robots" content="index, follow"><link rel="canonical" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Bistånd och Fattigaste ländernas topdomän|ccTLDs </title>
        <meta name="x-apple-disable-message-reformatting">
