--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script async="" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/gtm.htm"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<script async="" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/gtm.htm"></script>
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','G-N3QBH8LM');</script>
-	
+})(window,document,'script','dataLayer','G-ZEYBPG1S4Y');</script>
+		
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -40,11 +41,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
    <meta charset="utf-8">
   <title>Fattiga ländernas och industriländernas toppdomän  - The ccTLDs of poor countries and industrialized countries</title>
+	<meta name="google-site-verification" content="WdnsMxOviwQTsK0Dxo8FqJ2spmgqYOGkSwh6Nl-4wZk" />
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="Why the flags of the nations wave with religious symbols over the EU, UN and NATO therefore it is important to replace the religious symbols with the countries' own ccTLDs ?">
   <meta name="keywords" content="Polling station close to me,The top-level domain of poor countries and industrialized countries,Tre reformer som förändrar världen, Religions for peace ">
   <meta name="Multireligionval" content="How to Implement a replace these symbols with the countries' own ccTLDs: A Step-by-Step Guide ">
-  <link href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/" rel="canonical">
+  <meta name="robots" content="index, follow"><link rel="canonical" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/">
   <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/bootstrap3.min.css">
   <link rel="stylesheet" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/wireframe-theme.min.css">
  
