--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ s0.parentNode.insertBefore(s1,s0);
 
  <script>document.createElement( "picture" );</script>
 
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-N3QBH8LM"
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-ZEYBPG1S4Y"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div class="row nav-row">
@@ -112,19 +112,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
   <div class="row about-row">
     <div class="col-xs-12">
-      <h1>- <span class="heading-text-9">En effektiv konfliktlösningsmodell som aldrig &nbsp;tillämpats </span>
+      <h1>- <span class="heading-text-9">Debatt om religiösa symboler på flaggor vs. CcTLDs </span>
       </h1>
       <div class="rule dark-rule">
         <hr>
       </div>
       <p class="paragraph">Why do the flags of nations wave with religious symbols over the EU, UN, and NATO? It's important to replace these symbols with the countries' own ccTLDs. This change would make the flags more meaningful and respectful. <a title="" href="https://a-multi-religion-election-system.multireligionvalsystem.eu.org/den-judisk-kristna-politiska-alliansen" class="link"><br>
-          We start from the principle that it is democracy that has 
-given all religious communities freedom of religion, and that democracy 
-be introduced in all religions, without exception.
-A transition from church elections to a multi-religion electoral system 
-in those countries that already have church elections, In other 
-countries (USA, UK, China, India, Iran, Israel.....) that do not have 
-similar elections, a multi-religion electoral system is introduced.</a>.</p>
+          Debatt om religiösa symboler på flaggor vs. ccTLDs
+
+Översikt
+Denna diskussion utforskar betydelsen av religiösa symboler på nationella flaggor inom ramen för internationella organisationer som EU, FN och NATO. Den undersöker också förslaget att ersätta dessa symboler med landskod toppnivådomäner (ccTLDs).</a>.</p>
     </div>
     <div class="col-xs-12 team-column">
       <div class="container-fluid team-member-container">
@@ -136,8 +133,11 @@ similar elections, a multi-religion electoral system is introduced.</a>.</p>
           </picture>
         </div>
         <h4 class="team-name"> Political Practices in Exile </h4>
-        <p class="paragraph">Vapenindustrin är en ohållbar industri och därför måste den avvecklas på samma sätt som tobaksindustrin !
-Krig utgör ett hot mot miljön och mänskligheten.Why the flags of the nations wave with religious symbols over the EU, UN and NATO.</p>
+        <p class="paragraph">Argument för religiösa symboler på flaggor
+
+#Kulturarv
+
+Nationella flaggor speglar ofta ett lands kulturella och religiösa historia. Till exempel visar Greklands och Spaniens flaggor framträdande religiösa symboler som är viktiga för deras nationella berättelser.</p>
         <div class="container-fluid team-social-box"><a href="https://www.facebook.com/denyasvenskarna" target="_blank" class="social-image team-social-button" title="ttps://www.facebook.com/pages/De-svenska-partiernas-r%C3%B6tter/146480148715642"><img class="facebook-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-facebook.png" alt="Social Icon"></a><a href="#" target="_blank" class="social-image team-social-button"><img class="googleplus-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-googleplus.png" alt="Social Icon"></a><a href="https://twitter.com/DPNS" target="_blank" class="social-image team-social-button"><img class="twitter-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-twitter.png" alt="Social Icon"></a>
         </div>
       </div>
@@ -149,8 +149,11 @@ Krig utgör ett hot mot miljön och mänskligheten.Why the flags of the nations 
                 <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/7356a8bf-0294-4261-80bd-a61bc76a1f26.png 1x"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
           </picture>
         </div>
-        <h4 class="team-name">Demokratin</h4>
-        <p class="paragraph">Miljömodellen för demokrati, demokrati från teori till praktik&nbsp;.</p>
+        <h4 class="team-name">Argument för religiösa symboler på flaggor</h4>
+        <p class="paragraph">#Nationell identitet
+Religiösa symboler kan förena medborgare under ett gemensamt trossystem och stärka den nationella identiteten. De symboliserar de värderingar som formar en nations karaktär.
+#Globalt erkännande
+Flaggor med religiösa symboler kan förbättra en nations synlighet och erkännande på den internationella scenen och framhäva sociokulturella attribut.&nbsp;.</p>
         <div class="container-fluid team-social-box"><a href="https://www.facebook.com/Multireligionval/" target="_blank" class="social-image team-social-button"><img class="facebook-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-facebook.png" alt="Social Icon"></a><a href="#" target="_blank" class="social-image team-social-button"><img class="googleplus-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-googleplus.png" alt="Social Icon"></a><a href="https://twitter.com/DPNS" target="_blank" class="social-image team-social-button"><img class="twitter-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-twitter.png" alt="Social Icon"></a>
         </div>
       </div>
@@ -162,14 +165,11 @@ Krig utgör ett hot mot miljön och mänskligheten.Why the flags of the nations 
                 <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/review-2.jpg 1x"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
           </picture>
         </div>
-        <h4 class="team-name">Religionsfriheten</h4>
-        <p class="paragraph">1) Är att de protestantiska kyrkorna i de 
-nordiska länderna har infört demokrati i sina trossamfund genom kyrkoval
- ( Alternative voting systems ). Andra trossamfund motsätter sig denna 
-princip trots att de finansieras med skattemedel.
-<br>2) Är att de protestantiska kyrkorna genom att följa denna 
-demokratiska princip har givit 16- åringar rösträtt så att de får 
-praktisera demokrati två år innan det allmänna valet..</p>
+        <h4 class="team-name">Motargument till religiösa symboler på flaggor</h4>
+        <p class="paragraph">### Sekularism och inkludering
+I sekulära samhällen ska flaggor representera alla medborgare oavsett religiös tillhörighet. Religiösa symboler kan alienera icke-troende och undergräva en inkluderande nationell identitet.
+#Nationell suveränitet vs. religiös identitet
+Att betona religiös tillhörighet kan överskugga bredare nationella identiteter. En sekulär flagga skulle kunna främja enighet bland olika befolkningar.</p>
         <div class="container-fluid team-social-box"><a href="https://www.facebook.com/demokratin" target="_blank" class="social-image team-social-button"><img class="facebook-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-facebook.png" alt="Social Icon"></a><a href="#" target="_blank" class="social-image team-social-button"><img class="googleplus-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-googleplus.png" alt="Social Icon"></a><a href="https://twitter.com/DPNS" target="_blank" class="social-image team-social-button"><img class="twitter-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-twitter.png" alt="Social Icon"></a>
         </div>
       </div>
@@ -181,10 +181,8 @@ praktisera demokrati två år innan det allmänna valet..</p>
                 <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/e5278b24-1a3a-4717-9abe-9f473736d278.jpeg 1x"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
           </picture>
         </div>
-        <h4 class="team-name">frystorkning enligt Multireligionvalsystem</h4>
-        <p class="paragraph">Frystorkning av de avlidna i stället för 
-kremering och jordfästning. Krig och pandemier förorsakar mång dödsfall 
-vilket för att det är ohållbart att både kremering och jordbegravning.</p>
+        <h4 class="team-name">#Digital modernisering</h4>
+        <p class="paragraph">Att introducera ccTLDs skulle kunna spegla ett modernt förhållningssätt till nationell identitet i en digital värld. ccTLD:er blir allt mer relevanta i ett globaliserat sammanhang, och främjar en distinkt digital närvaro framför traditionella symboler..</p>
         <div class="container-fluid team-social-box"><a href="#" target="_blank" class="social-image team-social-button"><img class="facebook-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-facebook.png" alt="Social Icon"></a><a href="https://www.facebook.com/groups/Multireligionvalsystemet/" target="_blank" class="social-image team-social-button"><img class="googleplus-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-googleplus.png" alt="Social Icon"></a><a href="https://twitter.com/DPNS" target="_blank" class="social-image team-social-button"><img class="twitter-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-twitter.png" alt="Social Icon"></a>
         </div>
          <svg width="50%" height="50%" viewBox="0 0 9055 4092" version="1.1" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;">
@@ -630,8 +628,7 @@ vilket för att det är ohållbart att både kremering och jordbegravning.</p>
           <g id="_234" serif:id="234" transform="matrix(4.16667,0,0,4.16667,87.5,1990.54)">
             <path d="M0,21.5L424.7,21.5" style="fill:none;fill-rule:nonzero;stroke:rgb(47,174,169);stroke-width:1px;"></path>
             <g transform="matrix(1,0,0,1,7,15.717)">
-              <text x="0px" y="0px" style="font-family:'ArialMT', 'Arial', sans-serif;font-size:10px;fill:white;">Svenska
-                kyrkan har kyrkoval andra trossamfund saknar motsvarande</text>
+              <text x="0px" y="0px" style="font-family:'ArialMT', 'Arial', sans-serif;font-size:10px;fill:white;">###Dementera motstående punkter</text>
             </g> </g>
           <g id="_236" serif:id="236" transform="matrix(4.16667,0,0,4.16667,1468.04,1542.63)">
             <path d="M0,21.5L93.3,21.5" style="fill:none;fill-rule:nonzero;stroke:rgb(136,181,169);stroke-width:1px;"></path>
@@ -663,8 +660,7 @@ vilket för att det är ohållbart att både kremering och jordbegravning.</p>
                 <use xlink:href="#_Image2" x="0" y="0" width="64px" height="64px"></use>
               </g> </g>
             <g transform="matrix(1,0,0,1,28,16.717)">
-              <text x="0px" y="0px" style="font-family:'ArialMT', 'Arial', sans-serif;font-size:10px;fill:white;">Införa
-                demokrati i sitt trossamfund</text> </g> </g>
+              <text x="0px" y="0px" style="font-family:'ArialMT', 'Arial', sans-serif;font-size:10px;fill:white;">**Argument för kulturarv** Kulturell identitet kan firas på olika sätt än flaggor, vilket möjliggör en sekulär representation som är i linje med samtida värderingard</text> </g> </g>
           <g id="_269" serif:id="269" transform="matrix(4.16667,0,0,4.16667,6056.67,3583.17)">
             <path d="M0,23.5L242,23.5" style="fill:none;fill-rule:nonzero;stroke:rgb(47,174,169);stroke-width:1px;"></path>
             <g transform="matrix(0.25,0,0,0.25,7,2.25)">
@@ -672,8 +668,7 @@ vilket för att det är ohållbart att både kremering och jordbegravning.</p>
                 <use xlink:href="#_Image3" x="0" y="0" width="64px" height="64px"></use>
               </g> </g>
             <g transform="matrix(1,0,0,1,28,16.717)">
-              <text x="0px" y="0px" style="font-family:'ArialMT', 'Arial', sans-serif;font-size:10px;fill:white;">Nej,
-                Inget multireligionstöd, isolerat</text> </g> </g>
+              <text x="0px" y="0px" style="font-family:'ArialMT', 'Arial', sans-serif;font-size:10px;fill:white;">**Nationell identitetsargument ** Nationella identiteter kan vara robusta utan att helt förlita sig på religion. Sekulära nationer visar starka identiteter baserade på delad historia och kultur.</text> </g> </g>
           <g id="_273" serif:id="273" transform="matrix(4.16667,0,0,4.16667,6142.79,3720.67)">
             <path d="M0,23.5L238,23.5" style="fill:none;fill-rule:nonzero;stroke:rgb(47,174,169);stroke-width:1px;"></path>
             <g transform="matrix(0.25,0,0,0.25,7,2.25)">
@@ -681,8 +676,7 @@ vilket för att det är ohållbart att både kremering och jordbegravning.</p>
                 <use xlink:href="#_Image2" x="0" y="0" width="64px" height="64px"></use>
               </g> </g>
             <g transform="matrix(1,0,0,1,28,16.717)">
-              <text x="0px" y="0px" style="font-family:'ArialMT', 'Arial', sans-serif;font-size:10px;fill:white;">Införa
-                demokrati i sitt trossamfund</text> </g> </g>
+              <text x="0px" y="0px" style="font-family:'ArialMT', 'Arial', sans-serif;font-size:10px;fill:white;">**Globalt erkännandeargument** I den digitala tidsåldern kan ccTLDs effektivt representera en nations identitet och tilltala globala publiker och intressenter genom engagemang online</text> </g> </g>
           <g id="_275" serif:id="275" transform="matrix(4.16667,0,0,4.16667,6142.79,3858.17)">
             <path d="M0,23.5L240.7,23.5" style="fill:none;fill-rule:nonzero;stroke:rgb(47,174,169);stroke-width:1px;"></path>
             <g transform="matrix(0.25,0,0,0.25,7,2.25)">
@@ -824,7 +818,7 @@ vilket för att det är ohållbart att både kremering och jordbegravning.</p>
   <div class="row strategy-row">
     <div class="col-xs-12 column-3">
       <div class="container-fluid strategy-container" id="flex-item-2-copy-1">
-        <h1 class="strategy-heading">Fördelarna ! &nbsp;<span class="heading-text-7">Exkluder&nbsp;ing</span>
+        <h1 class="strategy-heading">Nationell suveränitet vs.  &nbsp;<span class="heading-text-7">religiös identite&nbsp;t !</span>
         </h1>
         <p class="paragraph strategy-p">
 Samernas nationaldag, Ursprungsbefolkning
@@ -836,14 +830,11 @@ skapa arbetstillfällen i Sampi.
 Samma modell tillämpas på andra minoriteter såsom kurder assyrier ,catalaner m fl.Ursprungsbefolkningar.
 
 Miljömodellen för demokrati, demokrati från teori till praktik, vilar på  ett multireligionvalsystem
-
-The arms industry is an unsustainable industry and therefore it must be phased out in the same way as the tobacco industry!
-War poses a threat to the environment and humanity.
 The environmental model of democracy, democracy from theory to practice, rests on a multi-religion electoral system 
 https://multireligionvalsystem.eu.org/investeringsprojekt-f%C3%B6r-flyktingar/
 
 Hur ser samerna på den nya flaggan ?! 
- <span class="paragraph-text-6">Två valmöjligheter</span> <span class="paragraph-text-4">gentemot</span> inte några valmöjligheter <span class="paragraph-text-5">The Intersection of Faith and Democracy: </span><br>Exploring<br> &nbsp;the Role of Religion in Ensuring Equal Voting Rightst &nbsp;<br><br>
+ <span class="paragraph-text-6">Utforska relevansen av digital identitet genom ccTLD:er.</span> <span class="paragraph-text-4">Debatt om</span> religiösa symboler på flaggor vs. CcTLDs <span class="paragraph-text-5">The Intersection of Faith and Democracy: </span><br>Exploring<br> &nbsp;the Role of Religion in Ensuring Equal Voting Rightst &nbsp;<br><br>
         </p>
       </div>
       <div class="container-fluid strategy-image-container" id="flex-container-1"></div>
@@ -852,26 +843,9 @@ Hur ser samerna på den nya flaggan ?!
   <div class="row strategy-row">
     <div class="col-xs-12 strategy-column">
       <div class="container-fluid strategy-container">
-        <h1 class="strategy-heading"><span class="pink-h">EU-parlamentariker och riksdagsledamöter</span>
+        <h1 class="strategy-heading"><span class="pink-h">Nationell suveränitet vs. religiös identitet</span>
         </h1>
-        <p class="paragraph strategy-p">Riksdagspartiernas deltagande i två olika val , allmänna valet och kyrkovalet ( Alternative voting systems ) <br>.Ytterligare
- problem är att riksdagspartierna får delta i kyrkovalet men inte alla 
-som röstar på dessa i det allmänna valet får vara med och rösta i 
-kyrkovalet ( Alternative voting systems ).
-Å ena sidan vid det allmänna valet har alla som har fyllt 18 år har 
-rösträtt oavsett religion, dvs medborgarna är jämställa när det gäller 
-rösträtt och våra röster i det allmänna valet har lika värde. 
-Å andra sidan i kyrkovalet som riksdagspartierna får delta i är 
-medborgarna indelade i de som har valmöjlighet att rösta eller att avstå
- från att rösta d v s protestantiska , medan andra trossamfund saknar 
-båda dessa valmöjligheter.
-Även politiker som statsråd , EU-parlamentariker och riksdagsledamöter 
-tillhörande något annat trossamfund än protestantismen exkluderas från 
-de valmöjligheterna !
-Vidare uppstår samma företeelse även inom de noriska massmedia , 
-jornalister och programledare tillhörande något annat trossamfund än 
-protestantismen exkluderas från de valmöjligheterna .( Alternative 
-voting systems )</p>
+        <p class="paragraph strategy-p"Debatten om att behålla religiösa symboler på nationella flaggor kontra att anta ccTLD är mångfacetterad. Även om religiösa symboler har historisk betydelse och kan beteckna arv, kan de också hindra inklusivitet och modernisering i en sekulär värld. Övergången till ccTLDs som symboler för nationell identitet representerar ett progressivt steg som är i linje med globala anslutningar</p>
       </div>
       <div class="container-fluid strategy-image-container" id="container-1"></div>
     </div>
@@ -880,14 +854,7 @@ voting systems )</p>
     <div class="col-xs-12 column-3">
       <div class="container-fluid strategy-container" id="flex-item-2">
         <h1 class="strategy-heading"><span class="heading-text-8">Palestina-Israel konflikten</span>&nbsp;Detta syns tydligt i den nordiska politiska debatten vad gäller Palestina-Israel konflikten. </h1>
-        <p class="paragraph strategy-p">4) den kristna-judiska politiska
- alliansen  som styr från EU &nbsp; Det ena för alla medborgare som har 
-rösträtt och som är likställda i det valet . Medan i kyrkovalet som 
-riksdagspartierna deltar i är medborgarna helt olika den ena har 
-rösträtt och men inte den andra. &nbsp;Att de exkluderade trossamfunden 
-får finansieras både via skattemedel , SST-stiftelse och dessutom 
-utnyttjas religionsfriheten utan att följa den demokratiska principen 
-vilket också är en avvikelse ! &nbsp;<br>
+        <p class="paragraph strategy-p">Detta är ett spännande ämne som överbryggar nationalism, identitet och religiösa symbolers roll i internationella organisationer. Jag kommer att presentera argument för båda sidor av debatten angående förekomsten av religiösa symboler på nationella flaggor kontra att ersätta dem med landskod på toppdomäner (ccTLDs). &nbsp;<br>
           Därför utgår vi från att Israel-Palestina-konflikten är av 
 religiös art och icke av politisk, ekonomisk eller social art. </p>
       </div>
