--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@ Hur ser samerna på den nya flaggan ?!
   <div class="row strategy-row">
     <div class="col-xs-12 column-3">
       <div class="container-fluid strategy-container" id="flex-item-2">
-        <h1 class="strategy-heading"><span class="heading-text-8">Palestina-Israel konflikten</span>&nbsp;Detta syns tydligt i den nordiska politiska debatten vad gäller Palestina-Israel konflikten. </h1>
+        <h1 class="strategy-heading"><span class="heading-text-8">konflikten</span>&nbsp;övergången till ccTLD:er ta hänsyn till varje nations sociopolitiska sammanhang, demografiska mångfald och den nationella identitetens framväxande karaktär  </h1>
         <p class="paragraph strategy-p">Detta är ett spännande ämne som överbryggar nationalism, identitet och religiösa symbolers roll i internationella organisationer. Jag kommer att presentera argument för båda sidor av debatten angående förekomsten av religiösa symboler på nationella flaggor kontra att ersätta dem med landskod på toppdomäner (ccTLDs). &nbsp;<br>
           Därför utgår vi från att Israel-Palestina-konflikten är av 
 religiös art och icke av politisk, ekonomisk eller social art. </p>
