--- a/Bistand-och-ccTLDs/index.html
+++ b/Bistand-och-ccTLDs/index.html
@@ -5,12 +5,21 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MMV2S7Z6');</script>
+    
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZEYBPG1S4Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZEYBPG1S4Y');
+</script>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
 <meta content='yes' name='apple-mobile-web-app-capable'>
 <meta name="google-site-verification" content="WdnsMxOviwQTsK0Dxo8FqJ2spmgqYOGkSwh6Nl-4wZk" />
     <meta name="robots" content="index, follow"><link rel="canonical" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Bistånd och Fattigaste ländernas topdomän|ccTLDs </title>
+    <title>Bistånd och Fattigaste ländernas topdomän|Argument för religiösa symboler på flaggor </title>
        <meta name="x-apple-disable-message-reformatting">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css">
